# vector-flow

./: .gitignore  CLAUDE.md  Cargo.toml  notes.txt
crates/vector-flow-app/: Cargo.toml
crates/vector-flow-app/src/: app.rs  canvas_panel.rs  export.rs  export_dialog.rs  id_map.rs  main.rs  overlay.rs  project.rs  properties_panel.rs  recent_files.rs  status_bar.rs  style_promote.rs  transport_panel.rs  ui_node.rs  undo.rs  viewer.rs
crates/vector-flow-compute/: Cargo.toml
crates/vector-flow-compute/src/: lib.rs
crates/vector-flow-compute/src/cpu/: color_math.rs  color_ops.rs  generators.rs  mod.rs  noise.rs  path_ops.rs  perturb.rs  styling.rs  svg_path.rs  tessellation.rs  text.rs  transforms.rs  utility.rs
crates/vector-flow-core/: Cargo.toml
crates/vector-flow-core/src/: compute.rs  error.rs  graph.rs  lib.rs  node.rs  scheduler.rs  types.rs
crates/vector-flow-dsl/: Cargo.toml
crates/vector-flow-dsl/src/: ast.rs  cache.rs  codegen.rs  error.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  span.rs  token.rs  type_check.rs
crates/vector-flow-render/: Cargo.toml
crates/vector-flow-render/src/: batch.rs  camera.rs  error.rs  lib.rs  offscreen.rs  overlay.rs  renderer.rs  text_raster.rs  vertex.rs
crates/vector-flow-render/src/shaders/: image.wgsl  vector.wgsl
crates/vector-flow-render/tests/: canvas_tests.rs
crates/vector-flow-render/tests/common/: mod.rs
docs/: app-guide.md  dsl-reference.md  node-reference.md  rendering-internals.md  vfs-internals.md  vfs-reference.md
files/: all-nodes.vflow  arcs.vflow  christmas-tree.vflow  divide.vflow  dsl.vflow  dsl2.vflow  grid.vflow  image.vflow  multi-scatter.vflow  path-offset.vflow  path-ops.vflow  perturb-grid.vflow  perturb.vflow  resample.vflow  scatter.vflow  stroke-path.vflow  svg-path.vflow  tangent.vflow  text.vflow
memory/: design-11-text-nodes.md  design-12-clipping.md  design-13-map-node.md  design-14-node-versioning.md  design-15-tolerance.md  design-16-port-visibility-and-style-node.md  design-17-skeletal-strokes.md  design-18-perturb-and-noise.md  design-19-control-points-overlay.md  plan-17-implementation.md
scripts/: gen_christmas_tree.rs
