[package]
name = "vector-flow-app"
version = "0.1.0"
edition = "2021"

[dependencies]
vector-flow-core = { path = "../vector-flow-core" }
vector-flow-compute = { path = "../vector-flow-compute" }
vector-flow-render = { path = "../vector-flow-render" }
eframe = { version = "0.31", default-features = false, features = ["wgpu", "x11", "wayland"] }
egui = "0.31"
egui-wgpu = "0.31"
egui-snarl = { path = "../../third-party/egui-snarl", features = ["serde"] }
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
env_logger = "0.11"
