[package]
name = "vector-flow-compute"
version = "0.1.0"
edition = "2021"

[dependencies]
vector-flow-core = { path = "../vector-flow-core" }
vector-flow-dsl = { path = "../vector-flow-dsl" }
glam = { version = "0.29", features = ["serde"] }
lyon = "1"
log = "0.4"
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ab_glyph = "0.2"
fontdb = "0.23"
i_overlay = "4.4.1"
