[package]
name = "vector-flow-render"
version = "0.1.0"
edition = "2021"

[dependencies]
vector-flow-core = { path = "../vector-flow-core" }
glam = { version = "0.29", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
egui = "0.31"
egui-wgpu = "0.31"
lyon = "1"
log = "0.4"
thiserror = "2"
